scrollbar fixed

--- a/css/main/reviews/reviews-mobile.css
+++ b/css/main/reviews/reviews-mobile.css
@@ -38,6 +38,10 @@
     height: 238px;
   }
 
+  .reviews-card-container::-webkit-scrollbar {
+    display: none;
+  }
+
   .reviews-card {
     display: flex;
     flex-direction: column;
@@ -86,11 +90,5 @@
     top: 0;
     left: 0;
     animation: autoscroll 2s ease-in-out 1s 2 alternate forwards;
-  }
-
-  ::-webkit-scrollbar,
-  ::-webkit-scrollbar-track,
-  ::-webkit-scrollbar-thumb {
-    display: none;
   }
 }
